Below are the changes
Undefined values are not displaying in the history table
performed to_char on date values
Changed CSS for the table format
Added local storage logic for welcome text
modified navigation bar in all the pages

--- a/SourceCode/contact.html
+++ b/SourceCode/contact.html
@@ -44,12 +44,10 @@
 							<ul class="main_nav_list">
 								<li class="main_nav_item"><a href="index.html">Home</a></li>
 								<li class="main_nav_item"><a href="profile.html">Profile</a></li>
-								<li class="main_nav_item"><a href="about.html">About us</a></li>
-								<!--<li class="main_nav_item"><a href="offers.html">Offers</a></li>-->
-								<!--<li class="main_nav_item"><a href="news.html">News</a></li>-->
 								<li class="main_nav_item active"><a href="#">Contact</a></li>
+								<li class="main_nav_item"><a href="history.html">History</a></li>
+								<li class="main_nav_item"><a href="about.html">About us</a></li>
 								<li class="main_nav_item"><a href="LoginPage.html">Sign Out</a></li>
-
 							</ul>
 						</nav>
 
