--- a/SourceCode/history.html
+++ b/SourceCode/history.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contact</title>
+    <title>History</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Destino project">
@@ -47,12 +47,11 @@
                         <nav class="main_nav ml-auto">
                             <ul class="main_nav_list">
                                 <li class="main_nav_item"><a href="index.html">Home</a></li>
-                                <li class="main_nav_item active"><a href="profile.html">Profile</a></li>
-                                <li class="main_nav_item"><a href="about.html">About us</a></li>
+                                <li class="main_nav_item"><a href="profile.html">Profile</a></li>
                                 <li class="main_nav_item"><a href="contact.html">Contact</a></li>
-                                <li class="main_nav_item"><a href="history.html">History</a></li>
+                                <li class="main_nav_item active"><a href="#">History</a></li>
+                                <li class="main_nav_item"><a href="about.html">About us</a></li>
                                 <li class="main_nav_item"><a href="LoginPage.html">Sign Out</a></li>
-                                <!--<li class="main_nav_item" onclick="signOut();"><a href="" >Sign Out</a></li>-->
                             </ul>
                         </nav>
                         <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
@@ -83,8 +82,8 @@
                             <div class="home_title">Welcome to Travel Explorer</div>
                             <div class="home_breadcrumbs">
                                 <ul class="home_breadcrumbs_list">
-                                    <li class="home_breadcrumb"><a href="index.html">Take some time to look at your profile</a></li>
-                                    <li class="home_breadcrumb">Feel free to edit it</li>
+                                    <li class="home_breadcrumb">Take some time to look at your Search Histroy</li>
+                                    <li class="home_breadcrumb">Feel free to view</li>
                                 </ul>
                             </div>
                         </div>
@@ -112,7 +111,7 @@
                     <div class="row">
                         <div class="col">
 
-                            <!-- Contact Form -->
+                            <center>
                             <div class="contact_form_container">
                                 <table id="weather" class="tftable" border="3">
                                     <tr>
