--- a/SourceCode/about.html
+++ b/SourceCode/about.html
@@ -37,12 +37,12 @@
 						<!-- Main Navigation -->
 						<nav class="main_nav ml-auto">
 							<ul class="main_nav_list">
+
 								<li class="main_nav_item"><a href="index.html">Home</a></li>
 								<li class="main_nav_item"><a href="profile.html">Profile</a></li>
-								<li class="main_nav_item active"><a href="#">About us</a></li>
-								<!--<li class="main_nav_item"><a href="offers.html">Offers</a></li>-->
-								<!--<li class="main_nav_item"><a href="news.html">News</a></li>-->
 								<li class="main_nav_item"><a href="contact.html">Contact</a></li>
+								<li class="main_nav_item"><a href="history.html">History</a></li>
+								<li class="main_nav_item active"><a href="#">About us</a></li>
 								<li class="main_nav_item"><a href="LoginPage.html">Sign Out</a></li>
 
 							</ul>
