--- a/SourceCode/profile.html
+++ b/SourceCode/profile.html
@@ -48,8 +48,9 @@
 							<ul class="main_nav_list">
 								<li class="main_nav_item"><a href="index.html">Home</a></li>
 								<li class="main_nav_item active"><a href="#">Profile</a></li>
-								<li class="main_nav_item"><a href="about.html">About us</a></li>
 								<li class="main_nav_item"><a href="contact.html">Contact</a></li>
+								<li class="main_nav_item"><a href="history.html">History</a></li>
+								<li class="main_nav_item"><a href="about.html">About us</a></li>
 								<li class="main_nav_item"><a href="LoginPage.html">Sign Out</a></li>
 								<!--<li class="main_nav_item" onclick="signOut();"><a href="" >Sign Out</a></li>-->
 							</ul>
