--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -178,7 +178,7 @@
 							<div>
 								</br>
 								<input type="button" class="button" style="color: #fe435b" ng-click="getSearchResult()" value="Find"/>
-                                &nbsp &nbsp<input type="button" class="button" style="color: #fe435b" ng-click="viewDirections()" value="View Places"/>
+                                &nbsp &nbsp<input type="button" class="button" style="color: #fe435b" ng-click="viewDirections()" value="Plan Your Trip"/>
 							</div>
 
 							
