-Enabling plan your trip button on click action of find button -After calculation on budget we will be getting new count which is sent to plan your trip and new page which will be added later -With the help of count we will be populating the data on to the map.

--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -177,8 +177,8 @@
 							<!--<button class="button find_button">Find</button>-->
 							<div>
 								</br>
-								<input type="button" class="button" style="color: #fe435b" ng-click="getSearchResult()" value="Find"/>
-                                &nbsp &nbsp<input type="button" class="button" style="color: #fe435b" ng-click="viewDirections()" value="Plan Your Trip"/>
+								<input type="button" class="button" style="color: #fe435b;" ng-click="getSearchResult()" value="Find"/>
+                                &nbsp &nbsp<input type="button" id="btn2" class="button" style="color: #fe435b;visibility: hidden" ng-click="viewDirections()" value="Plan Your Trip"/>
 							</div>
 
 							
