--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -179,6 +179,7 @@
 								</br>
 								<input type="button" class="button" style="color: #fe435b;" ng-click="getSearchResult()" value="Find"/>
                                 &nbsp &nbsp<input type="button" id="btn2" class="button" style="color: #fe435b;visibility: hidden" ng-click="viewDirections()" value="Plan Your Trip"/>
+								&nbsp &nbsp<input type="button" id="btn3" class="button" style="color: #fe435b;visibility: hidden" ng-click="viewDirections1()" value="View result"/>
 							</div>
 
 							
