Committing changes of days of travel button and correcting name error in history page

--- a/SourceCode/history.html
+++ b/SourceCode/history.html
@@ -110,13 +110,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-
-                            <center>
                             <div class="contact_form_container">
                                 <table id="weather" class="tftable" border="3">
                                     <tr>
                                         <th>S No</th>
-                                        <th>Eamil ID</th>
+                                        <th>Email ID</th>
                                         <th>Destination</th>
                                         <th>From</th>
                                         <th>To</th>
