--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -152,12 +152,8 @@
 								<h5 style="color: red">{{finalErr}}</h5>
 							</div>
 							<div class="find_item">
-								<div>From</div>
-								<input type="date" ng-model="from" class="destination find_input" >
-							</div>
-							<div class="find_item">
-								<div>To</div>
-								<input type="date" ng-model="to" class="destination find_input"  >
+								<div>Number of Days</div>
+								<input type="text" class="destination find_input" >
 							</div>
 							<div class="find_item">
 								<div>Budget</div>
