--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -153,7 +153,7 @@
 							</div>
 							<div class="find_item">
 								<div>Number of Days</div>
-								<input type="text" class="destination find_input" >
+								<input type="text" class="destination find_input" id="no_days">
 							</div>
 							<div class="find_item">
 								<div>Budget</div>
