--- a/SourceCode/results.html
+++ b/SourceCode/results.html
@@ -52,8 +52,8 @@
 </head>
 <body ng-app="indexpage" ng-controller="indexctrl" style="background-image:url(images/cta.jpg);">
 <div id="map" style="visibility: hidden; display:none;" ></div>
-<div id="right-panel">
-    <div  class="find_form d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-md-between justify-content-start flex-wrap">
+<div id="right-panel" style="visibility: hidden; display:none;" >
+    <div  style="visibility: hidden; display:none;" class="find_form d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-md-between justify-content-start flex-wrap">
         <b style="color: white">From</b>
         <select id="start" class="dropdown_item_select find_input">
             <option ng-repeat="x in elements track by $index" value="{{x}}">{{x}}</option>
@@ -71,32 +71,27 @@
         </select>
         </br>
         </br>
-        <input type="submit" class="button123" style="color: #fe435b" id="submit" value="View" onclick="hideFunction()">
-        &nbsp &nbsp<input type="submit" class="button123" style="color: #fe435b" id="back" value="Back">
     </div>
     <br>
+
     <div id="directions-panel" style="display:none"></div>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 <div class="offers">
     <div class="container">
         <div class="row">
             <div class="col text-center">
-                <h1 class="section_title" style="color:steelblue;">Itinerary for your Trip! Have fun :)</h1>
+                <h1 class="section_title" style="color:lemonchiffon;">Itinerary for your Trip! Have fun :)</h1>
+                <br>
+                <input type="submit" class="button" style="color: #fe435b" id="submit" value="Get My Plan" onclick="hideFunction()">
+                &nbsp &nbsp<input type="submit" class="button" style="color: #fe435b;"  id="back" value="Back">
+                <br>
+                <br>
             </div>
         </div>
-        <div class="row offers_items" >
-            <div id="results" class="col-lg-6 offers_col" style="background-image: url(images/fact_background.jpg);">
-            <!-- Offers Item -->
+        <div id="results" class="row offers_items" >
 
-            </div>
         </div>
     </div>
 </div>
@@ -192,22 +187,36 @@
                 var summaryPanel1 = document.getElementById('results');
                 summaryPanel1.innerHTML ="";
                 var div =addArray.length / no_of_days;
-                for (var i = 0; i < div; i++) {
-                    summaryPanel1.innerHTML +=
-                        '                <div class="offers_item">\n' +
-                        '                    <div class="row">\n' +
-                        '                        <div class="col-lg-6">\n' +
-                        '                            <div class="offers_content">\n' +
-                        '                                <p class="offers_text"><h3 style="color:antiquewhite;">Your Itinerary</h3></p>\n' +
-                        '                                <p class="offers_text" style="color:antiquewhite;">Day : '+no_of_days +'</p>\n' +
-                        '                                <p class="offers_text" style="color:antiquewhite;">Address: '+addArray[i]+'</p>\n' +
-                        '                                <div class="offers_link" style="visibility: hidden"><a href="offers.html">read more</a></div>\n' +
-                        '                            </div>\n' +
-                        '                        </div>\n' +
-                        '                    </div>\n' +
-                        '                </div>\n'
-
+                var x;
+                for(x=0;x<no_of_days;x++)
+                {
+                    summaryPanel1.innerHTML += '<div  id ='+x+' class="col-lg-6 offers_col" style="background-image: url(images/fact_background.jpg);"> </div>';
                 }
+
+                var temp = 0;
+                for (x=0;x<no_of_days;x++) {
+                    var summaryPanel2 = document.getElementById(x);
+                    var days=0;
+                    days = x+1;
+                    summaryPanel2.innerHTML += '<p class="offers_text"><h3 style="color:antiquewhite;">Your Itinerary for Day ' + days + '</h3></p>';
+                    for (var i =0; i < div; i++) {
+
+                        summaryPanel2.innerHTML +=
+                            '                <div class="offers_item">\n' +
+                            '                    <div class="row">\n' +
+                            '                        <div class="col-lg-6">\n' +
+                            '                            <div class="offers_content">\n' +
+                            '                                <p class="offers_text" style="color:antiquewhite;">Address: ' + addArray[temp] + '</p>\n' +
+                            '                                <div class="offers_link" style="visibility: hidden"><a href="offers.html">read more</a></div>\n' +
+                            '                            </div>\n' +
+                            '                        </div>\n' +
+                            '                    </div>\n' +
+                            '                </div>\n';
+                        temp=temp+1;
+
+                    }
+                }
+
             } else {
                 window.alert('Directions request failed due to ' + status);
             }
