Below are the changes 1. AddedLogic for map results for the itinerary search 2. Added a new html for incorporating the above logic 3. Modified cell names at index and the result page

--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -175,7 +175,7 @@
 								</br>
 								<input type="button" class="button" style="color: #fe435b;" ng-click="getSearchResult()" value="Find"/>
                                 &nbsp &nbsp<input type="button" id="btn2" class="button" style="color: #fe435b;visibility: hidden" ng-click="viewDirections()" value="Plan Your Trip"/>
-								&nbsp &nbsp<input type="button" id="btn3" class="button" style="color: #fe435b;visibility: hidden" ng-click="viewDirections1()" value="View result"/>
+								&nbsp &nbsp<input type="button" id="btn3" class="button" style="color: #fe435b;visibility: hidden" ng-click="viewDirections1()" value="View Itinerary"/>
 							</div>
 
 							
