--- a/SourceCode/results.html
+++ b/SourceCode/results.html
@@ -99,7 +99,7 @@
 
 
 
-    <script async defer
+<script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWhSE1HAi753_M8rcFTfcbBXUQInf8y6c&v=3.exp&callback=initMap">
 </script>
 <script>
@@ -109,18 +109,16 @@
     var budget_count=(url.substring(url.indexOf("**")+2,url.indexOf("^^")))
     var no_of_days =(url.substring(url.indexOf("^^")+2,url.length)).replace("%20"," ");
     var search_keyword=place+"***"+interest;
-
     console.log("It is !!!!!!!!!!!"+place);
     console.log("It is !!!!!!!!!!!"+interest);
-
     document.getElementById('back').addEventListener('click', function() {
         location.href='index.html?place'+place+"&&interest"+interest;
     });
-     addArray = [];
+    addArray = [];
     angular.module('indexpage',[])
         .controller('indexctrl', function($scope, $http) {
             $http.get('http://127.0.0.1:8081/getPlaces?searchkey='+search_keyword).then(function(data)
-            //$http.get("https://maps.googleapis.com/maps/api/place/textsearch/json?query="+place+"+point+of+interest"+interest+"&language=en&key=AIzaSyAk8FdCcWPekxegcpFkUAL5frrMc73F-4E").then(function (data)
+                //$http.get("https://maps.googleapis.com/maps/api/place/textsearch/json?query="+place+"+point+of+interest"+interest+"&language=en&key=AIzaSyAk8FdCcWPekxegcpFkUAL5frrMc73F-4E").then(function (data)
             {
                 if (data.data != null) {
                     var results = data.data.results.sort((a, b) => a.rating - b.rating);
@@ -143,7 +141,6 @@
             center: {lat: 39.85, lng: -98.65}
         });
         directionsDisplay.setMap(map);
-
         document.getElementById('submit').addEventListener('click', function() {
             calculateAndDisplayRoute(directionsService, directionsDisplay);
         });
@@ -153,10 +150,10 @@
         //var checkboxArray = document.getElementById('waypoints');
         for (var i = 1; i < addArray.length ; i++) {
             //if (checkboxArray.options[i].selected) {
-                waypts.push({
-                    location: addArray[i],
-                    stopover: true
-                });
+            waypts.push({
+                location: addArray[i],
+                stopover: true
+            });
             //}
         }
         console.log(addArray[0]);
@@ -188,40 +185,53 @@
                 summaryPanel1.innerHTML ="";
                 var div =addArray.length / no_of_days;
                 console.log(div);
-                var x;
-                for(x=0;x<no_of_days;x++)
+                // var x;
+                for(let x=0;x<no_of_days;x++)
                 {
                     summaryPanel1.innerHTML += '<div  id ='+x+' class="col-lg-6 offers_col" style="background-image: url(images/fact_background.jpg);"> </div>';
                 }
-
                 var temp = 0;
-                for (x=0;x<no_of_days;x++) {
+                var wayptsarr=[];
+                for (let x=0;x<no_of_days;x++) {
                     console.log("it is",addArray.length);
                     console.log("x is",x);
                     if(x<addArray.length) {
                         var summaryPanel2 = document.getElementById(x);
+                        var summaryPanel3 = document.getElementById(x);
                         var days = 0;
                         days = x + 1;
                         summaryPanel2.innerHTML += '<p class="offers_text"><h3 style="color:antiquewhite;">Your Itinerary for Day ' + days + '</h3></p>';
+                        let points = [];
                         for (var i = 0; i < div; i++) {
                             if (addArray[temp]) {
+                                points.push(addArray[temp])
                                 summaryPanel2.innerHTML +=
                                     '                <div class="offers_item">\n' +
                                     '                    <div class="row">\n' +
                                     '                        <div class="col-lg-6">\n' +
                                     '                            <div class="offers_content">\n' +
                                     '                                <p class="offers_text" style="color:antiquewhite;">Address: ' + addArray[temp] + '</p>\n' +
-                                    // '                                <div class="offers_link" style="visibility: hidden"><a href="offers.html">read more</a></div>\n' +
                                     '                            </div>\n' +
                                     '                        </div>\n' +
                                     '                    </div>\n' +
+                                    '                    <div id="map"></div>\n' +
                                     '                </div>\n';
                                 temp = temp + 1;
                             }
                         }
+                        if(div>=2) {
+                            summaryPanel3.innerHTML +=
+                                '                                <div class="offers_link"><a href="javascript:;" >View it on Map</a></div>\n' +
+                                '                </div>\n';
+                            summaryPanel3.getElementsByTagName('a')[0].addEventListener('click', function () {
+                                localStorage.setItem('clickedDay', x);
+                                console.log(typeof(points));
+                                localStorage.setItem('qweeeee', JSON.stringify(points));
+                                location.href = 'resultsMap.html';
+                            })
+                        }
                     }
                 }
-
             } else {
                 window.alert('Directions request failed due to ' + status);
             }
