-Destination text box value text is not coming correct when the page is redirected from plan your trip to home page,fixed by taking correct substring -Changed the position of the forgot password in LoginPage.html

--- a/SourceCode/LoginPage.html
+++ b/SourceCode/LoginPage.html
@@ -44,11 +44,11 @@
                 <input type="password" style="width: 100%; left:35%; position: relative" id="mypassword" ng-model="password" placeholder="Password" required>
                 <br>
 				<br>
-                <input type="button" class="button" style="padding:9px 18px; left: 37%;position: relative"
+                <input type="button" class="button" style="padding:9px 18px; left: 55%;position: relative"
                        value="Login"
 					   ng-click="getDbData()">
-				<br>
-				<a href="" ng-click="getPassword()"><u>forgot password?</u></a>
+
+				<a href="" ng-click="getPassword()"><u style="position: relative;left:54%;font-size: 10px">forgot password?</u></a>
             </fieldset>
         </form>
 
