Below are the changes 1. Modified DIC logic, when the card has one element it will display it on the map

--- a/SourceCode/results.html
+++ b/SourceCode/results.html
@@ -219,7 +219,7 @@
                                 temp = temp + 1;
                             }
                         }
-                        if(div>=2) {
+                        // if(div>=2) {
                             summaryPanel3.innerHTML +=
                                 '                                <div class="offers_link"><a href="javascript:;" >View it on Map</a></div>\n' +
                                 '                </div>\n';
@@ -229,7 +229,7 @@
                                 localStorage.setItem('qweeeee', JSON.stringify(points));
                                 location.href = 'resultsMap.html';
                             })
-                        }
+                        // }
                     }
                 }
             } else {
