Below are the changes Modified the budget logic in Main page and Direction page. Now it pulls all the lines irrespective to its budget

--- a/SourceCode/directions.html
+++ b/SourceCode/directions.html
@@ -111,7 +111,10 @@
                     var results = data.data.results.sort((a, b) => a.rating - b.rating);
                     var length = data.data.results.length;
                     var diff_count=length - budget_count;
-                    for (var j = length - 1; j >=diff_count; j--) {
+
+                    let count=(results.length-1)-new_length;
+                    for (var j = results.length-1; j >=0; j--) {
+                    // for (var j = results.length-1; j >count; j--) {
                         console.log("It is oh ",results[j].name);
                         addArray.push(results[j].formatted_address);
                     }
