Added a back button in a page where we view day plan, upon pressing back button we would be redirected to home page

--- a/SourceCode/resultsMap.html
+++ b/SourceCode/resultsMap.html
@@ -55,6 +55,8 @@
 </head>
 <body ng-app="indexpage" ng-controller="indexctrl" style="background-image:url(images/find.jpg)">
 <div id="map"></div>
+<input type="submit" class="button" style="color: #fe435b; width:100%;font-size: 30px"  id="back" value="Back">
+
 <!--<div id="right-panel">-->
     <!--<div  class="find_form d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-md-between justify-content-start flex-wrap">-->
         <!--<b style="color: white">From</b>-->
