--- a/SourceCode/results.html
+++ b/SourceCode/results.html
@@ -188,7 +188,7 @@
                 // var x;
                 for(let x=0;x<no_of_days;x++)
                 {
-                    summaryPanel1.innerHTML += '<div  id ='+x+' class="col-lg-6 offers_col" style="background-image: url(images/fact_background.jpg);"> </div>';
+                    summaryPanel1.innerHTML += '<div  id ='+x+'  style="text-align:center; background-image: url(images/fact_background.jpg);"> </div>';
                 }
                 var temp = 0;
                 var wayptsarr=[];
@@ -212,11 +212,11 @@
                             if (addArray[temp]) {
                                 points.push(addArray[temp])
                                 summaryPanel2.innerHTML +=
-                                    '                <div class="offers_item">\n' +
-                                    '                    <div class="row">\n' +
-                                    '                        <div class="col-lg-6">\n' +
-                                    '                            <div class="offers_content">\n' +
-                                    '                                <p class="offers_text" style="color:antiquewhite;">Address: ' + addArray[temp] + '</p>\n' +
+                                    '                <div class="offers_item" style="text-align: center;">\n' +
+                                    '                    <div class="row" style="text-align: center;">\n' +
+                                    '                        <div class="col-lg-6" style="text-align: center;">\n' +
+                                    '                            <div class="offers_content" style="text-align: center;">\n' +
+                                    '                                <p class="offers_text" style="position: relative;left: 50% ;color:antiquewhite;">Address: ' + addArray[temp] + '</p>\n' +
                                     '                            </div>\n' +
                                     '                        </div>\n' +
                                     '                    </div>\n' +
