Below are the changes 1. Modified history logic in home page anf history page

--- a/SourceCode/contact.html
+++ b/SourceCode/contact.html
@@ -92,7 +92,7 @@
 				
 						<p><b>Harish Tata</b> |  Email: hthnv@mail.umkc.edu</p>
 						<p><b>Pallavi Desai</b>  | Email: pd2qd@mail.umkc.edu</p>
-						<p><b>Masthan Krishna Neeraj Padarthi</b>  | Email: nmpxr@mail.umkc.edu</p>
+						<p><b>Mastan Krishna Neeraj Padarthi</b>  | Email: nmpxr@mail.umkc.edu</p>
 						<p><b>Saran Akkiraju</b>  | Email: saf2k@mail.umkc.edu</p>
 					</div>
 				</div>
