--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -153,7 +153,7 @@
 							</div>
 							<div style="top: -2.5%" class="find_item">
 								<div style="position:relative;left: -40%">Number of Days</div>
-								<input type="text" style="position:relative;left: -40%;" class="destination find_input" id="no_days">
+								<input type="text" style="position:relative;left: -40%;" class="destination find_input" id="no_days" ng-model="no_days">
 							</div>
 							<div style="top: -2.5%" class="find_item">
 								<div style="position:relative;left: -80%">Budget</div>
